- 3344757: Beam, deref of potential Null pointers.
- 3344917: Beam, file leak
- 3528819: Crash in getInstance when instance has NULL properties
- 3530609: Various BEAM Errors
- 3435363: Wrong call of curl_global_cleanup()
- 3547832: memory leak in backend/cimxml/grammer.c
- 3555103: wrong declaration of release attribute in _CIMCArgsFT
- 3566968: sfcc enumInstances fails to parse the xml

Changes in 2.2.3
================

Bugs:
- 2967265: Code cleanup in frontend/sfcc/sfcclient.c
- 3286489: getInstance does not return key/value through XML

Changes in 2.2.2
================

Bugs:
- 2982349: Memory leak in backend/cimxml/client.c
- 2982352: Double free in backend/cimxml/property.c
- 3043288: XML generated with VALUE.ARRAY for ref arrays
- 3043282: XML gen for embedded instances for invokeMethod is incorrect
- 3059060: 'struct _CIMCArgsFT' not defined in cimc/cimcft.h
- 2348900: Concurrency issue when parsing responses
- 2793377: Missing includes
- 3101151: SfcbLocal failed to connect due to hardcoded library path
- 3195267: sfcc v2 tests segfault when sfcb is not running
- 2990315: cmciRelease not called in case of error
- 3196128: enumInstances does not set NameSpace in ObjectPath in XML mode
- 1956407: CIM-XML/HTTP connection to unix socket
- 2967257: Use of CMPI_chars in SFCC. General CMPI specification bug
- 2847964: sfcc's getClass() fails to report class qualifiers

Changes in 2.2.1
================

Bugs:
- 2691478: sfcc 2.1.0 cannot handle OutParams on Extrinsic Method Call
- 2847782: sfcc getClass crashes if cimom isn't running
- 2849853: getClass reports most property types as CMPI_Instance

Changes in 2.2
==============
Bugs:
- 2102339: Missing ret values in sblim-sfcc
- 2102345: missing configuration of CIM-HOST-PORT in sblim-sfcc
- 2158091: sfcb modules belong in private dir
- 2270179: Missing includes and values in return statements
- 2431835: XML client library not found. 
- 2596921: v2test_ei test fails when using CIMXML interface