@@ -13,6 +13,7 @@ Bugs:
 - 3547832: memory leak in backend/cimxml/grammer.c
 - 3555103: wrong declaration of release attribute in _CIMCArgsFT
 - 3566968: sfcc enumInstances fails to parse the xml
+- 3586680: improve error reporting in cmciConnect2
 
 Changes in 2.2.3
 ================
